Npm scripts / Localização / Blog novo layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,8 +53,8 @@
 </div>
 
 <!-- Membership -->
-<div class="row">
-  <img src="assets/img/sobre-nos-10.jpg" class="col s12 m6">
+<div class="row" style="display: flex;">
+  <div class="col s12 m6" style="background: url(assets/img/sobre-nos-10.jpg); background-size: cover;"></div>
   <div class="col s12 m6">
     <div class="icon-block" style="padding: 100px 0;">
       <h3 class="amber-text">Membership</h3>
@@ -64,8 +64,8 @@
 </div>
 
 <!-- Personal Trainning -->
-<div class="row">
-  <img src="assets/img/sobre-nos-5.jpg" class="col s12 m6 push-m6">
+<div class="row" style="display: flex;">
+  <div class="col s12 m6 push-m6" style="background: url(assets/img/sobre-nos-5.jpg); background-size: cover;"></div>
   <div class="col s12 m6 pull-m6">
     <div class="icon-block" style="padding: 100px 0;">
       <h3 class="black-text">Personal Training</h3>
@@ -75,8 +75,8 @@
 </div>
 
 <!-- Group Classes -->
-<div class="row">
-  <img src="assets/img/sobre-nos-8.jpg" class="col s12 m6">
+<div class="row" style="display: flex;">
+	<div class="col s12 m6" style="background: url(assets/img/sobre-nos-8.jpg); background-size: cover;"></div>
   <div class="col s12 m6">
     <div class="icon-block" style="padding: 100px 0;">
       <h3 class="black-text">Group Classes</h3>
@@ -86,8 +86,8 @@
 </div>
 
 <!-- F7 Crossfit -->
-<div class="row">
-  <img src="assets/img/studio-fitness-o2.jpg" class="col s12 m6 push-m6">
+<div class="row" style="display: flex;">
+	<div class="col s12 m6 push-m6" style="background: url(assets/img/studio-fitness-o2.jpg); background-size: cover;"></div>
   <div class="col s12 m6 pull-m6">
     <div class="icon-block" style="padding: 100px 0;">
       <h3 class="black-text">F7 Crossfit</h3>
