--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,49 +23,9 @@
 <router-outlet></router-outlet>
 
 <footer class="page-footer grey darken-3">
-  <div class="container">
-    <div class="center contact-us grey-text text-lighten-2">
-      <h4>Contact <span class="amber-text">us</span></h4>
-    </div>
-    <div class="row">
-      <form class="col s12">
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="first_name" type="text" class="validate">
-            <label for="first_name" class="active">Nome</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="email" type="email" class="validate">
-            <label for="email" class="active">Email</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="phone" type="text" class="validate">
-            <label for="phone" class="active">Telefone</label>
-          </div>
-        </div>
+	
+	<app-contato></app-contato>
 
-        <div class="row">
-            <div class="row">
-              <div class="input-field col s12">
-                <textarea id="message" class="materialize-textarea"></textarea>
-                <label for="message" class="active">Mensagem</label>
-              </div>
-            </div>
-        </div>
-
-        <div class="center">
-          <button class="btn amber waves-effect waves-light" type="submit" name="action">Enviar
-            <i class="material-icons right">send</i>
-          </button>
-        </div>
-
-      </form>
-    </div>
-  </div>
   <div class="amber footer-links">
     <div class="container grey-text text-darken-3" style="padding: 0 15px;">
       <div class="row">
