--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,40 +1,43 @@
 <div class="container">
+	<div class="center contact-us grey-text text-lighten-2">
+		<h4>Entre em <span class="amber-text">contato</span></h4>
+	</div>
+	<div class="row">
+		<form class="col s12" [formGroup]="myForm" (ngSubmit)="onSubmit()">
+			<div class="row">
+				<div class="input-field col s12">
+					<input id="first_name" type="text" class="validate" formControlName="name">
+					<label for="first_name" class="active">Nome</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="input-field col s12">
+					<input id="email" type="email" class="validate" formControlName="email">
+					<label for="email" class="active">Email</label>
+				</div>
+			</div>
+			<div class="row">
+				<div class="input-field col s12">
+					<input id="phone" type="text" class="validate" formControlName="phone">
+					<label for="phone" class="active">Telefone</label>
+				</div>
+			</div>
 
-  <div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="first_name" type="text" class="validate">
-          <label for="first_name">Nome</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="phone" type="text" class="validate">
-          <label for="phone">Telefone</label>
-        </div>
-      </div>
+			<div class="row">
+				<div class="row">
+					<div class="input-field col s12">
+						<textarea id="message" class="materialize-textarea" formControlName="message"></textarea>
+						<label for="message" class="active">Mensagem</label>
+					</div>
+				</div>
+			</div>
 
-      <div class="row">
-          <div class="row">
-            <div class="input-field col s12">
-              <textarea id="message" class="materialize-textarea"></textarea>
-              <label for="message">Mensagem</label>
-            </div>
-          </div>
-      </div>
+			<div class="center">
+				<button class="btn amber waves-effect waves-light" type="submit" name="action">Enviar
+            <i class="material-icons right">send</i>
+          </button>
+			</div>
 
-      <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
-        <i class="material-icons right">send</i>
-      </button>
-
-    </form>
-  </div>
-
+		</form>
+	</div>
 </div>
