--- a/src/app/localizacao/localizacao.component.html
+++ b/src/app/localizacao/localizacao.component.html
@@ -1,3 +1,7 @@
-<div class="container">
-    <img src="assets/img/mapa.jpg" alt="Localização Fitness O2" style="width: 100%;">
-</div>
+<!-- this creates a google map on the page with the given lat/lng from -->
+<!-- the component as the initial center of the map: -->
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
+	<agm-marker [latitude]="lat" [longitude]="lng">
+		<agm-info-window>Studio Fitness O2</agm-info-window>
+	</agm-marker>
+</agm-map>
